# app/app/openapi.yaml
@@ -24,6 +24,59 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
+    /api/admin_dhb/config:
+        get:
+            tags:
+                - App
+            operationId: App_AdminConfig
+            parameters:
+                - name: userId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminConfigReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/config_update:
+        post:
+            tags:
+                - App
+            operationId: App_AdminConfigUpdate
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AdminConfigUpdateRequest_SendBody'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminConfigUpdateReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /api/admin_dhb/fee:
         get:
             tags:
@@ -64,6 +117,30 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/AdminLocationListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/month_recommend:
+        get:
+            tags:
+                - App
+            operationId: App_AdminMonthRecommend
+            parameters:
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminMonthRecommendReply'
                 default:
                     description: Default error response
                     content:
@@ -120,6 +197,64 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/AdminUserListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/user_month_recommend:
+        get:
+            tags:
+                - App
+            operationId: App_AdminUserMonthRecommend
+            parameters:
+                - name: userId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminUserMonthRecommendReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/admin_dhb/user_recommend:
+        get:
+            tags:
+                - App
+            operationId: App_AdminUserRecommend
+            parameters:
+                - name: userId
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+                - name: page
+                  in: query
+                  schema:
+                    type: integer
+                    format: int64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/AdminUserRecommendReply'
                 default:
                     description: Default error response
                     content:
@@ -250,6 +385,29 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/FeeRewardListReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /api/app_server/recommend_list:
+        get:
+            tags:
+                - App
+            operationId: App_RecommendList
+            parameters:
+                - name: type
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/RecommendListReply'
                 default:
                     description: Default error response
                     content:
@@ -387,6 +545,38 @@ components:
                     type: string
                 allSystemRewardAndFee:
                     type: string
+        AdminConfigReply:
+            type: object
+            properties:
+                config:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/AdminConfigReply_List'
+                count:
+                    type: integer
+                    format: int64
+        AdminConfigReply_List:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                name:
+                    type: string
+                value:
+                    type: string
+        AdminConfigUpdateReply:
+            type: object
+            properties: {}
+        AdminConfigUpdateRequest_SendBody:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: int64
+                value:
+                    type: integer
+                    format: int64
         AdminFeeReply:
             type: object
             properties: {}
@@ -421,6 +611,26 @@ components:
                 current:
                     type: string
                 currentMax:
+                    type: string
+        AdminMonthRecommendReply:
+            type: object
+            properties:
+                users:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/AdminMonthRecommendReply_List'
+                count:
+                    type: integer
+                    format: int64
+        AdminMonthRecommendReply_List:
+            type: object
+            properties:
+                address:
+                    type: string
+                id:
+                    type: integer
+                    format: int64
+                createdAt:
                     type: string
         AdminRewardListReply:
             type: object
@@ -475,6 +685,46 @@ components:
                 historyRecommend:
                     type: integer
                     format: int64
+        AdminUserMonthRecommendReply:
+            type: object
+            properties:
+                users:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/AdminUserMonthRecommendReply_List'
+                count:
+                    type: integer
+                    format: int64
+        AdminUserMonthRecommendReply_List:
+            type: object
+            properties:
+                address:
+                    type: string
+                id:
+                    type: integer
+                    format: int64
+                createdAt:
+                    type: string
+        AdminUserRecommendReply:
+            type: object
+            properties:
+                users:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/AdminUserRecommendReply_List'
+                count:
+                    type: integer
+                    format: int64
+        AdminUserRecommendReply_List:
+            type: object
+            properties:
+                address:
+                    type: string
+                id:
+                    type: integer
+                    format: int64
+                createdAt:
+                    type: string
         AdminWithdrawEthReply:
             type: object
             properties: {}
@@ -554,6 +804,20 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        RecommendListReply:
+            type: object
+            properties:
+                recommends:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/RecommendListReply_List'
+        RecommendListReply_List:
+            type: object
+            properties:
+                amount:
+                    type: string
+                status:
+                    type: string
         RecommendRewardListReply:
             type: object
             properties:
@@ -661,6 +925,12 @@ components:
                     type: string
                 account:
                     type: string
+                recommendNumAll:
+                    type: integer
+                    format: int64
+                recommendTeamAll:
+                    type: integer
+                    format: int64
         WithdrawListReply:
             type: object
             properties:
